--- a/templates/login.html
+++ b/templates/login.html
@@ -7,15 +7,16 @@
 </head>
 <body>
     <div class="text">
+        <span class="icon">📞</span>
         <h2>Sign in</h2>
     </div>
-<form method="POST" class="form">
-  <input name="username" placeholder="Username" required>
-  <input name="password" type="password" placeholder="Password" required>
-  <button type="submit">Login</button>
-    <div class="text">
-      <p>Don't have an account? <a href="/register">Register</a></p>
-    </div>
-</form>
+    <form method="POST" class="form">
+        <input name="username" placeholder="Username" required>
+        <input name="password" type="password" placeholder="Password" required>
+        <button type="submit" class="login-btn">Login</button>
+        <div class="text">
+            <p>Don't have an account? <a href="/register">Register</a></p>
+        </div>
+    </form>
 </body>
 </html>
