--- a/templates/register.html
+++ b/templates/register.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-    <title>Title</title>
+    <title>Register</title>
 </head>
 <body>
     <div class="text">
+        <span class="icon">📞</span>
         <h2>Sign up</h2>
     </div>
-<form method="POST" class="form">
-  <input name="username" placeholder="Username" required>
-  <input name="password" type="password" placeholder="Password" required>
-  <button type="submit">Register</button>
-    <div class="text">
-      <p>Already have an account? <a href="/login">Login</a></p>
-    </div>
-</form>
-
+    <form method="POST" class="form">
+        <input name="username" placeholder="Username" required>
+        <input name="password" type="password" placeholder="Password" required>
+        <button type="submit" class="register-btn">Register</button>
+        <div class="text">
+            <p>Already have an account? <a href="/login">Login</a></p>
+        </div>
+    </form>
 </body>
 </html>
