--- a/templates/register.html
+++ b/templates/register.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
     <title>Register</title>
 </head>
 <body>
     <div class="text">
-        <span class="icon">📞</span>
+        <div class="icon">📞</div>
         <h2>Sign up</h2>
     </div>
+
     <form method="POST" class="form">
         <input name="username" placeholder="Username" required>
         <input name="password" type="password" placeholder="Password" required>
