--- a/templates/users.html
+++ b/templates/users.html
@@ -18,7 +18,7 @@
         <p>There are no users.</p>
     {% endif %}
 
-    <p><a href="{{ url_for('chat') }}">Back to chat rooms</a></p>
+    <p><a href="{{ url_for('chat') }}">Back to chats</a></p>
     <p><a href="{{ url_for('logout') }}">Log out</a></p>
 </body>
 </html>
