--- a/templates/chat_list.html
+++ b/templates/chat_list.html
@@ -17,7 +17,7 @@
         {% endfor %}
         </ul>
     {% else %}
-        <p>You don't have any chat rooms.</p>
+        <p>You don't have any chats.</p>
     {% endif %}
 
     <p><a href="{{ url_for('users_list') }}">All users</a></p>
